Deactivate unused classes

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -51,21 +51,21 @@
 *--------------------------*/
 @widths: {
   w-auto:auto;
-  w-px:1px;
-  w-0: 0;
-  w-1: 0.25rem;
+  // w-px:1px;
+  // w-0: 0;
+  // w-1: 0.25rem;
   w-2: 0.5rem;
   w-3: 0.75rem;
   w-4: 1rem;
-  w-5: 1.25rem;
+  // w-5: 1.25rem;
   w-6: 1.5rem;
-  w-8: 2rem;
-  w-10: 2.5rem;
-  w-12: 3rem;
+  // w-8: 2rem;
+  // w-10: 2.5rem;
+  // w-12: 3rem;
   w-16: 4rem;
-  w-20: 5rem;
+  // w-20: 5rem;
   w-24: 6rem;
-  w-32: 8rem;
+  // w-32: 8rem;
   w-40: 10rem;
   w-48: 12rem;
   w-56: 14rem;
@@ -110,43 +110,43 @@
   max-w-md: 28rem;
   max-w-lg: 32rem;
   max-w-xl: 36rem;
-  max-w-2xl: 42rem;
+  // max-w-2xl: 42rem;
   max-w-3xl: 48rem;
   max-w-4xl: 56rem;
   max-w-5xl: 64rem;
   max-w-6xl: 72rem;
-  max-w-full: 100%;
+  // max-w-full: 100%;
 }
 
 @heights: {
-  h-0: 0;
-  h-1: 0.25rem;
-  h-2: 0.5rem;
+  // h-0: 0;
+  // h-1: 0.25rem;
+  // h-2: 0.5rem;
   h-3: 0.75rem;
   h-4: 1rem;
-  h-5: 1.25rem;
+  // h-5: 1.25rem;
   h-6: 1.5rem;
-  h-8: 2rem;
-  h-10: 2.5rem;
-  h-12: 3rem;
-  h-16: 4rem;
-  h-20: 5rem;
-  h-24: 6rem;
-  h-32: 8rem;
-  h-40: 10rem;
-  h-48: 12rem;
-  h-56: 14rem;
-  h-64: 16rem;
+  // h-8: 2rem;
+  // h-10: 2.5rem;
+  // h-12: 3rem;
+  // h-16: 4rem;
+  // h-20: 5rem;
+  // h-24: 6rem;
+  // h-32: 8rem;
+  // h-40: 10rem;
+  // h-48: 12rem;
+  // h-56: 14rem;
+  // h-64: 16rem;
   h-auto: auto;
-  h-px: 1px;
+  // h-px: 1px;
   h-full: 100%;
-  h-screen: 100vh;
+  // h-screen: 100vh;
 }
 
 @min-heights: {
-  min-h-0: 0;
-  min-h-full: 100%;
-  min-h-screen: 100vh;
+  // min-h-0: 0;
+  // min-h-full: 100%;
+  // min-h-screen: 100vh;
 }
 
 /*-------------------------
@@ -160,7 +160,7 @@
 @xxl: 1440px;
 
 @breakpoints: {
-  sm: @sm;
+  // sm: @sm;
   md: @md;
   lg: @lg;
   xl: @xl;
@@ -174,10 +174,10 @@
   inline-block: inline-block;
   inline: inline;
   flex: flex;
-  inline-flex: inline-flex;
+  // inline-flex: inline-flex;
   table: table;
-  table-row: table-row;
-  table-cell: table-cell;
+  // table-row: table-row;
+  // table-cell: table-cell;
   hidden: none;
 }
 
@@ -185,26 +185,26 @@
 * Object Fit
 *--------------------------*/
 @object-fit: {
-  object-contain: contain;
-  object-cover: cover;
-  object-fill: fill;
-  object-none: none;
-  object-scale-down: scale-down;
+  // object-contain: contain;
+  // object-cover: cover;
+  // object-fill: fill;
+  // object-none: none;
+  // object-scale-down: scale-down;
 }
 
 /*-------------------------
 * Object Position
 *--------------------------*/
 @object-position: {
-  object-bottom: bottom;
-  object-center: center;
-  object-left: left;
-  object-left-bottom: left bottom;
-  object-left-top: left top;
-  object-right: right;
-  object-right-bottom: right bottom;
-  object-right-top: right top;
-  object-top: top;
+  // object-bottom: bottom;
+  // object-center: center;
+  // object-left: left;
+  // object-left-bottom: left bottom;
+  // object-left-top: left top;
+  // object-right: right;
+  // object-right-bottom: right bottom;
+  // object-right-top: right top;
+  // object-top: top;
 }
 
 /*-------------------------
@@ -239,12 +239,12 @@
 * Z Index
 *--------------------------*/
 @z-index: {
-  z-0: 0;
-  z-10: 10;
-  z-20: 20;
-  z-30: 30;
-  z-40: 40;
-  z-50: 50;
+  // z-0: 0;
+  // z-10: 10;
+  // z-20: 20;
+  // z-30: 30;
+  // z-40: 40;
+  // z-50: 50;
 }
 
 /*-------------------------
