--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -27,3 +27,4 @@
 @import "components/forms.less";
 @import "components/headings.less";
 @import "components/markup.less";
+@import "components/tabs.less";
