--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -74,6 +74,14 @@ each(@background-size, #(@k, @v) {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E74EB9', endColorstr='#882395', GradientType=1);
 }
 
+.bg-alpha-button {
+  background: #2A2A2E;
+  background: -moz-linear-gradient(-45deg, #737373 0%, #2A2A2E 100%);
+  background: -webkit-linear-gradient(-45deg, #737373 0%, #2A2A2E 100%);
+  background: linear-gradient(135deg, #737373 0%, #2A2A2E 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#737373', endColorstr='#2A2A2E', GradientType=1);
+}
+
 .bg-body {
   &:extend(.bg-top, .bg-no-repeat, .bg-cover);
   background-image: url('../img/thunderbird/backgrounds/bg-body.png');
