--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -64,13 +64,13 @@
         <main class="flex flex-col flex-1 ml-4">
           <h3 class="header-section">{{ _('Thunderbird Nightly')}}</h3>
           <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-            {{ _('Get an even further look at our next generation of Thunderbird with the unstable Nightly builds.') }}
+            {{ _('Help us test the newest developments made to Thunderbird every day by using the unstable Nightly channel.') }}
           </p>
           <p class="tracking-wider leading-loose mb-2 mt-0 flex-1 text-black-light">
             <span class="bg-orange p-1 rounded-sm font-bold mr-1 inline-block leading-none text-white font-sm">
               {{ _('WARNING!') }}
             </span>
-            {{ _('Nightly is an unstable testing and development platform.') }}
+            {{ _('Nightly is an unstable testing and development platform, make sure you back up important data regularly!') }}
           </p>
           <aside class="ml-0 mr-0 self-start text-left text-blue font-semibold">
             {{ download_thunderbird(force_direct=true, alt_copy=_('Download Nightly'), channel='alpha') }}
