--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -8,7 +8,7 @@
     <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
       {{ _('Thunderbird is both free and freedom respecting, but we’re also completely funded by donations! Help us sustain the project and continue to improve.') }}
     </p>
-    <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0 font-lg lg:font-base" target="_blank">
+    <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0 font-lg lg:font-base">
       <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
     </a>
   </aside>
@@ -22,8 +22,7 @@
     <form action="https://mozilla.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=9badb0cec2"
     class="shadow flex items-center rounded-md self-start p-1"
     method="post" id="mc-embedded-subscribe-form"
-    name="mc-embedded-subscribe-form"
-    target="_blank">
+    name="mc-embedded-subscribe-form">
     <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
     class="w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
     <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
