Fix #143: Correct Nightly download button, URLs, and channel name.

--- a/assets/less/base/backgrounds.less
+++ b/assets/less/base/backgrounds.less
@@ -74,7 +74,7 @@ each(@background-size, #(@k, @v) {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E74EB9', endColorstr='#882395', GradientType=1);
 }
 
-.bg-alpha-button {
+.bg-nightly-button {
   background: #2A2A2E;
   background: -moz-linear-gradient(-45deg, #737373 0%, #2A2A2E 100%);
   background: -webkit-linear-gradient(-45deg, #737373 0%, #2A2A2E 100%);
