--- a/assets/less/components/tabs.less
+++ b/assets/less/components/tabs.less
@@ -9,7 +9,7 @@
 }
 
 #beta:checked ~ section.tab.beta,
-#alpha:checked ~ section.tab.alpha {
+#nightly:checked ~ section.tab.nightly {
   display: flex;
 }
 
@@ -29,6 +29,6 @@
 }
 
 #beta:checked ~ aside nav .tabs-nav .beta label,
-#alpha:checked ~ aside nav .tabs-nav .alpha label {
+#nightly:checked ~ aside nav .tabs-nav .nightly label {
   &:extend(.bg-blue, .text-white);
 }
