Fix missing group headers in release notes for beta page. Fixes #151

--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -54,53 +54,68 @@
     <section class="pb-10 flex flex-wrap justify-center items-center pl-8 pr-8 bg-grey-lighter">
       <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
         {% set section = namespace(name='') %}
-        {% for group in range(release.groups|length) %}
-          {% for note in notes %}
-            {% if section.name != note.tag %}
-              {% set section.name = note.tag %}
+        {% set release_group = namespace(name='') %}
 
-              {% if section.name == 'new' %}
-                <h3 id="whatsnew" class="header-section">
-                  <span>{{ svg('bookmark') }}</span>{{ _('What’s New')}}
-                </h3>
-              {% elif section.name == 'changed' %}
-                <h3 id="changes" class="header-section pt-14 pb-4">
-                  <span>{{ svg('sync') }}</span>{{ _('Changes')}}
-                </h3>
-              {% elif section.name == 'fixed' %}
-                <h3 id="fixes" class="header-section pt-14 pb-4">
-                  <span>{{ svg('check') }}</span>{{ _('Fixes')}}
-                </h3>
-              {% endif %}
-
+        {% if notes %}
+          {% for group in range(release.groups|length) %}
+            {% if release.groups[group] %}
+              <section class="mt-10 mb-8 flex justify-center items-center w-full">
+                <span class="header-line flex-1"></span>
+                <h2 class="header-section pl-4 pr-4 mb-0 text-center">
+                  {{ release.groups[group] }}
+                </h2>
+                <span class="header-line flex-1"></span>
+              </section>
+              {% set section.name = "" %}
             {% endif %}
-            {% if note.get('group', 1)-1 == group and note.tag != 'unresolved' %}
-              <aside id="note-{{ note.id }}" class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
-                <h4 class="font-bold uppercase m-0 p-3 w-24">
-                  {% if note.tag == 'new' %}
-                    <aside class="flex items-center text-orange">
-                      <span class="w-4 mr-2">{{ svg('bookmark') }}</span>
-                      {{ note.tag }}
-                    </aside>
-                  {% elif note.tag == 'changed' %}
-                    <aside class="flex items-center text-purple">
-                      <span class="w-4 mr-2">{{ svg('sync') }}</span>
-                      {{ note.tag }}
-                    </aside>
-                  {% elif note.tag == 'fixed' %}
-                    <aside class="flex items-center text-green">
-                      <span class="w-4 mr-2">{{ svg('check') }}</span>
-                      {{ note.tag }}
-                    </aside>
-                  {% endif %}
-                </h4>
-                <aside class="flex-1 p-3 font-md leading-normal markup-page no-padding">
-                  {{ note.note|markdown|safe }}
+
+            {% for note in notes %}
+              {% if note.get('group', 1)-1 == group and note.tag != 'unresolved' %}
+                {% if note.tag == 'new' and section.name != note.tag %}
+                  <h3 id="whatsnew" class="header-section">
+                    <span>{{ svg('bookmark') }}</span>{{ _('What’s New')}}
+                  </h3>
+                {% elif note.tag == 'changed' and section.name != note.tag %}
+                  <h3 id="changes" class="header-section pt-14 pb-4">
+                    <span>{{ svg('sync') }}</span>{{ _('Changes')}}
+                  </h3>
+                {% elif note.tag == 'fixed' and section.name != note.tag %}
+                  <h3 id="fixes" class="header-section pt-14 pb-4">
+                    <span>{{ svg('check') }}</span>{{ _('Fixes')}}
+                  </h3>
+                {% endif %}
+
+                {% set section.name = note.tag %}
+                {% set release_group.name = release.groups[group] %}
+
+                <aside id="note-{{ note.id }}"
+                  class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+                  <h4 class="font-bold uppercase m-0 p-3 w-24">
+                    {% if note.tag == 'new' %}
+                      <aside class="flex items-center text-orange">
+                        <span class="w-4 mr-2">{{ svg('bookmark') }}</span>
+                        {{ note.tag }}
+                      </aside>
+                    {% elif note.tag == 'changed' %}
+                      <aside class="flex items-center text-purple">
+                        <span class="w-4 mr-2">{{ svg('sync') }}</span>
+                        {{ note.tag }}
+                      </aside>
+                    {% elif note.tag == 'fixed' %}
+                      <aside class="flex items-center text-green">
+                        <span class="w-4 mr-2">{{ svg('check') }}</span>
+                        {{ note.tag }}
+                      </aside>
+                    {% endif %}
+                  </h4>
+                  <aside class="flex-1 p-3 font-md leading-normal markup-page no-padding">
+                    {{ note.note|markdown|safe }}
+                  </aside>
                 </aside>
-              </aside>
-            {% endif %}
+              {% endif %}
+            {% endfor %}
           {% endfor %}
-        {% endfor %}
+        {% endif %}
 
         {% if known_issues %}
           <h3 id="known-issues" class="header-section pt-14 pb-4">
