Fix cookies link and add id for anchor link directly to beta download.

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -57,7 +57,7 @@
         <a href="{{ url('privacy') }}" class="small-link" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a>
       </li>
       <li class="ml-2 mr-2">
-        <a href="{{ url('privacy.notices.websites') }}#cookies" class="small-link" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a>
+        <a href="{{ url('privacy.notices.websites') }}" class="small-link" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a>
       </li>
       <li class="ml-2 mr-2">
         <a href="{{ url('legal.index') }}" class="small-link" data-link-type="footer"
