--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -32,7 +32,7 @@
       <aside class="self-start text-left lg:-mt-12 ml-20 md:pl-8">
         <nav>
           <ul class="list-none p-0 flex flex-wrap font-semibold tabs-nav">
-            <li class="beta">
+            <li id="channel" class="beta">
               <label for="beta">Beta Channel</label>
             </li>
             <li class="nightly">
