--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -64,6 +64,10 @@
           data-link-name="Legal">{{ _('Legal') }}</a>
       </li>
       <li class="ml-2 mr-2">
+        <a href="{{ url('guidelines') }}" class="small-link" data-link-type="footer"
+          data-link-name="guidelines">{{ _('Participation Guidelines') }}</a>
+      </li>
+      <li class="ml-2 mr-2">
         <a href="{{ url('legal.fraud-report') }}" class="small-link" data-link-type="footer"
           data-link-name="Report Trademark Abuse">{{ _('Report Trademark Abuse') }}</a>
       </li>
@@ -72,7 +76,7 @@
     <p class="mt-6 mb-6 leading-normal">
       {%- trans url=url('foundation.licensing.website-content') -%}
       Portions of this content are ©1998–{{ current_year }} by individual
-      mozilla.org contributors. Content available under
+      contributors. Content available under
       a <a href="{{ url }}" class="inline-link">Creative Commons license</a>.
       {%- endtrans -%}
     </p>
