Add Careers page

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -15,6 +15,9 @@
             <a href="{{ url('thunderbird.get-involved') }}" class="nav-link">{{_('Get Involved')}}</a>
           </li>
           <li>
+            <a href="{{ url('thunderbird.careers') }}" class="nav-link">{{_('Careers')}}</a>
+          </li>
+          <li>
             <a href="{{ url('support') }}" class="nav-link">{{_('Get Help')}}</a>
           </li>
           <li>
