Add link to Pontoon in footer. Fixes #168

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -88,6 +88,7 @@
     </p>
 
     <a href="{{ url('contribute') }}" class="small-link font-semibold" data-link-type="footer"
-      data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a>
+      data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a> &bull;
+    <a href="https://pontoon.mozilla.org/projects/thunderbirdnet" class="small-link font-semibold" data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a>
   </section>
 </footer>
