--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -88,7 +88,10 @@
     </p>
 
     <a href="{{ url('contribute') }}" class="small-link font-semibold" data-link-type="footer"
-      data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a> &bull;
-    <a href="https://pontoon.mozilla.org/projects/thunderbirdnet" class="small-link font-semibold" data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a>
+      data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a>
+    {% if LANG != 'en-US' %}
+     &bull; <a href="https://pontoon.mozilla.org/{{ LANG }}/thunderbirdnet/LC_MESSAGES/messages.po/" class="small-link font-semibold"
+      data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a>
+    {% endif %}
   </section>
 </footer>
