Restore wave background to release notes, but with reduced white space.

--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -46,6 +46,10 @@
     </aside>
   </section>
 
+  <section class="pt-20 pb-16 w-full bg-calendar -mt-20">
+    &nbsp;
+  </section>
+
   {% if notes %}
     <section class="pb-10 flex flex-wrap justify-center items-center pl-8 pr-8 bg-grey-lighter">
       <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
