--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -54,7 +54,7 @@
       </aside>
     </aside>
   </section>
-  <section class="self-center text-center max-w-4xl mt-8">
+  <section class="self-center text-center max-w-5xl mt-8">
     <ul class="list-none p-0 flex justify-center">
       <li class="ml-2 mr-2">
         <a href="{{ url('privacy') }}" class="small-link" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a>
@@ -71,8 +71,12 @@
           data-link-name="guidelines">{{ _('Participation Guidelines') }}</a>
       </li>
       <li class="ml-2 mr-2">
+        <a href="{{ url('legal.infringement') }}" class="small-link" data-link-type="footer"
+          data-link-name="infringement">{{ _('Report Trademark or Copyright Infringement') }}</a>
+      </li>
+      <li class="ml-2 mr-2">
         <a href="{{ url('legal.fraud-report') }}" class="small-link" data-link-type="footer"
-          data-link-name="Report Trademark Abuse">{{ _('Report Trademark Abuse') }}</a>
+          data-link-name="Report Trademark Misuse">{{ _('Report Misuse of Thunderbird Trademark') }}</a>
       </li>
     </ul>
 
