--- a/website/_includes/release-notes.html
+++ b/website/_includes/release-notes.html
@@ -19,26 +19,47 @@
       {{ _('Version {version}, first offered to {channel} channel users on {date}')|f(channel=release.channel, date=release.release_date|l10n_format_date, version=release.version) }}
     </p>
   </section>
-  <nav role="directory" class="text-center text-white flex justify-center max-w-6xl mx-auto bg-black-25 rounded mb-10">
-    <ul class="list-none p-0 flex flex-wrap justify-around flex-1 m-0">
-      <li class="ml-2 mr-2">
-        <a href="#whatsnew" class="btn-link">{{ _('What’s new') }}</a>
-      </li>
-      <li class="ml-2 mr-2">
-        <a href="#changes" class="btn-link">{{ _('Changes') }}</a>
-      </li>
-      <li class="ml-2 mr-2">
-        <a href="#fixes" class="btn-link">{{ _('Bug Fixes') }}</a>
-      </li>
-    </ul>
-  </nav>
+  {% if notes %}
+    {% set ns = namespace(whatsnew=false, changes=false, fixes=false) %}
+    {% for note in notes if not (ns.whatsnew and ns.changes and ns.fixes) %}
+      {% if note.tag == 'new' %}
+        {% set ns.whatsnew = true %}
+      {% elif note.tag == 'changed' %}
+        {% set ns.changes = true %}
+      {% elif note.tag == 'fixed' %}
+        {% set ns.fixes = true %}
+      {% endif %}
+    {% endfor %}
+    <nav role="directory" class="text-center text-white flex justify-center max-w-6xl mx-auto bg-black-25 rounded mb-10">
+      <ul class="list-none p-0 flex flex-wrap justify-around flex-1 m-0">
+        {% if ns.whatsnew %}
+          <li class="ml-2 mr-2">
+            <a href="#whatsnew" class="btn-link">{{ _('What’s new') }}</a>
+          </li>
+        {% endif %}
+        {% if ns.changes %}
+        <li class="ml-2 mr-2">
+          <a href="#changes" class="btn-link">{{ _('Changes') }}</a>
+        </li>
+        {% endif %}
+        {% if ns.fixes %}
+        <li class="ml-2 mr-2">
+          <a href="#fixes" class="btn-link">{{ _('Bug Fixes') }}</a>
+        </li>
+        {% endif %}
+        <li class="ml-2 mr-2">
+          <a href="{{ url('thunderbird.releases.index') }}" class="btn-link">{{ _('All Releases') }}</a>
+        </li>
+      </ul>
+    </nav>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
   <section  class="pt-20 flex justify-center items-center pl-8 pr-8">
     <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
       <p class="font-lg tracking-wider leading-loose mb-6 p-links-blue">
-        {{ _('Check out "What’s New" and "Known Issues" for this version of Thunderbird below. As always, you’re encouraged to <a href="%(feedback)s">tell us what you think</a>, or <a href="%(bugzilla)s">file a bug in Bugzilla</a>')|format(feedback='https://support.mozilla.org/questions/new/thunderbird', bugzilla='https://bugzilla.mozilla.org/') }}
+        {{ _('Check out the notes below for this version of Thunderbird. As always, you’re encouraged to <a href="%(feedback)s">tell us what you think</a>, or <a href="%(bugzilla)s">file a bug in Bugzilla</a>')|format(feedback='https://support.mozilla.org/questions/new/thunderbird', bugzilla='https://bugzilla.mozilla.org/') }}
       </p>
       <aside class="font-lg tracking-wider leading-loose mb-6 markup-page">
         {{ release.text|markdown|safe }}
@@ -49,73 +70,70 @@
   <section class="pt-20 pb-16 w-full bg-calendar -mt-20">
     &nbsp;
   </section>
-
   {% if notes %}
     <section class="pb-10 flex flex-wrap justify-center items-center pl-8 pr-8 bg-grey-lighter">
       <aside class="flex flex-col w-full max-w-6xl lg:ml-16 lg:mr-16">
         {% set section = namespace(name='') %}
         {% set release_group = namespace(name='') %}
 
-        {% if notes %}
-          {% for group in range(release.groups|length) %}
-            {% if release.groups[group] %}
-              <section class="mt-10 mb-8 flex justify-center items-center w-full">
-                <span class="header-line flex-1"></span>
-                <h2 class="header-section pl-4 pr-4 mb-0 text-center">
-                  {{ release.groups[group] }}
-                </h2>
-                <span class="header-line flex-1"></span>
-              </section>
-              {% set section.name = "" %}
-            {% endif %}
+        {% for group in range(release.groups|length) %}
+          {% if release.groups[group] %}
+            <section class="mt-10 mb-8 flex justify-center items-center w-full">
+              <span class="header-line flex-1"></span>
+              <h2 class="header-section pl-4 pr-4 mb-0 text-center">
+                {{ release.groups[group] }}
+              </h2>
+              <span class="header-line flex-1"></span>
+            </section>
+            {% set section.name = "" %}
+          {% endif %}
 
-            {% for note in notes %}
-              {% if note.get('group', 1)-1 == group and note.tag != 'unresolved' %}
-                {% if note.tag == 'new' and section.name != note.tag %}
-                  <h3 id="whatsnew" class="header-section">
-                    <span>{{ svg('bookmark') }}</span>{{ _('What’s New')}}
-                  </h3>
-                {% elif note.tag == 'changed' and section.name != note.tag %}
-                  <h3 id="changes" class="header-section pt-14 pb-4">
-                    <span>{{ svg('sync') }}</span>{{ _('Changes')}}
-                  </h3>
-                {% elif note.tag == 'fixed' and section.name != note.tag %}
-                  <h3 id="fixes" class="header-section pt-14 pb-4">
-                    <span>{{ svg('check') }}</span>{{ _('Fixes')}}
-                  </h3>
-                {% endif %}
-
-                {% set section.name = note.tag %}
-                {% set release_group.name = release.groups[group] %}
-
-                <aside id="note-{{ note.id }}"
-                  class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
-                  <h4 class="font-bold uppercase m-0 p-3 w-24">
-                    {% if note.tag == 'new' %}
-                      <aside class="flex items-center text-orange">
-                        <span class="w-4 mr-2">{{ svg('bookmark') }}</span>
-                        {{ note.tag }}
-                      </aside>
-                    {% elif note.tag == 'changed' %}
-                      <aside class="flex items-center text-purple">
-                        <span class="w-4 mr-2">{{ svg('sync') }}</span>
-                        {{ note.tag }}
-                      </aside>
-                    {% elif note.tag == 'fixed' %}
-                      <aside class="flex items-center text-green">
-                        <span class="w-4 mr-2">{{ svg('check') }}</span>
-                        {{ note.tag }}
-                      </aside>
-                    {% endif %}
-                  </h4>
-                  <aside class="flex-1 p-3 font-md leading-normal markup-page no-padding">
-                    {{ note.note|markdown|safe }}
-                  </aside>
-                </aside>
+          {% for note in notes %}
+            {% if note.get('group', 1)-1 == group and note.tag != 'unresolved' %}
+              {% if note.tag == 'new' and section.name != note.tag %}
+                <h3 id="whatsnew" class="header-section">
+                  <span>{{ svg('bookmark') }}</span>{{ _('What’s New')}}
+                </h3>
+              {% elif note.tag == 'changed' and section.name != note.tag %}
+                <h3 id="changes" class="header-section pt-14 pb-4">
+                  <span>{{ svg('sync') }}</span>{{ _('Changes')}}
+                </h3>
+              {% elif note.tag == 'fixed' and section.name != note.tag %}
+                <h3 id="fixes" class="header-section pt-14 pb-4">
+                  <span>{{ svg('check') }}</span>{{ _('Fixes')}}
+                </h3>
               {% endif %}
-            {% endfor %}
+
+              {% set section.name = note.tag %}
+              {% set release_group.name = release.groups[group] %}
+
+              <aside id="note-{{ note.id }}"
+                class="flex flex-row flex-wrap items-center bg-white shadow-md mb-4 rounded">
+                <h4 class="font-bold uppercase m-0 p-3 w-24">
+                  {% if note.tag == 'new' %}
+                    <aside class="flex items-center text-orange">
+                      <span class="w-4 mr-2">{{ svg('bookmark') }}</span>
+                      {{ note.tag }}
+                    </aside>
+                  {% elif note.tag == 'changed' %}
+                    <aside class="flex items-center text-purple">
+                      <span class="w-4 mr-2">{{ svg('sync') }}</span>
+                      {{ note.tag }}
+                    </aside>
+                  {% elif note.tag == 'fixed' %}
+                    <aside class="flex items-center text-green">
+                      <span class="w-4 mr-2">{{ svg('check') }}</span>
+                      {{ note.tag }}
+                    </aside>
+                  {% endif %}
+                </h4>
+                <aside class="flex-1 p-3 font-md leading-normal markup-page no-padding">
+                  {{ note.note|markdown|safe }}
+                </aside>
+              </aside>
+            {% endif %}
           {% endfor %}
-        {% endif %}
+        {% endfor %}
 
         {% if known_issues %}
           <h3 id="known-issues" class="header-section pt-14 pb-4">
