detect ChromeOS and make it not supported (instead of thinking it's Windows) fixes #153

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -206,6 +206,7 @@ button {
 
 .windows.arm .download-button .unsupported-download,
 .linux.arm .download-button .linux-arm-download,
+.chromeos .download-button .unsupported-download,
 .oldwin .download-button .unsupported-download,
 .oldmac .download-button .unsupported-download {
   display: block;
@@ -215,6 +216,7 @@ button {
 // Hide the privacy link if platform is unsupported.
 .windows.arm .download-button .fx-privacy-link,
 .linux.arm .download-button .fx-privacy-link,
+.chromeos .download-button .fx-privacy-link,
 .oldwin .download-button .fx-privacy-link,
 .oldmac .download-button .fx-privacy-link {
   display: none;
