mobile devices width fix

--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -34,7 +34,7 @@
     method="post" id="mc-embedded-subscribe-form"
     name="mc-embedded-subscribe-form">
     <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
-    class="w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
+    class="md:w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
     <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
     <!-- Prevent Bot signups -->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
