--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -55,26 +55,26 @@
     </aside>
   </section>
   <section class="self-center text-center max-w-5xl mt-8">
-    <ul class="list-none p-0 flex justify-center">
-      <li class="ml-2 mr-2">
+    <ul class="list-none p-0 flex justify-center flex-wrap -mt-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('privacy') }}" class="small-link" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a>
       </li>
-      <li class="ml-2 mr-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('privacy.notices.websites') }}" class="small-link" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a>
       </li>
-      <li class="ml-2 mr-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('legal.index') }}" class="small-link" data-link-type="footer"
           data-link-name="Legal">{{ _('Legal') }}</a>
       </li>
-      <li class="ml-2 mr-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('guidelines') }}" class="small-link" data-link-type="footer"
           data-link-name="guidelines">{{ _('Participation Guidelines') }}</a>
       </li>
-      <li class="ml-2 mr-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('legal.infringement') }}" class="small-link" data-link-type="footer"
           data-link-name="infringement">{{ _('Report Trademark or Copyright Infringement') }}</a>
       </li>
-      <li class="ml-2 mr-2">
+      <li class="ml-2 mr-2 mt-2">
         <a href="{{ url('legal.fraud-report') }}" class="small-link" data-link-type="footer"
           data-link-name="Report Trademark Misuse">{{ _('Report Misuse of Thunderbird Trademark') }}</a>
       </li>
