--- a/website/_includes/product-all-macros.html
+++ b/website/_includes/product-all-macros.html
@@ -68,12 +68,12 @@
     </h4>
     <aside class="flex flex-col p-1 pl-2 pr-2 items-center lg:items-end">
       <aside class="flex flex-row flex-wrap justify-center">
-        {% for p_name, p_label in platforms[:4] %}
+        {% for p_name, p_label in (platforms|list())[:4] %}
           {{ build_button(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
         {% endfor %}
       </aside>
       <aside class="flex flex-row flex-wrap justify-center mt-2 mb-2 lg:mb-0">
-        {% for p_name, p_label in platforms[-2:] %}
+        {% for p_name, p_label in (platforms|list())[-2:] %}
           {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
         {% endfor %}
       </aside>
