--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -172,7 +172,7 @@ button {
 .download-button .os_win64,
 .download-button .os_linux,
 .download-button .os_linux64,
-.win7up.x86.x64 .download-button-nightly .os_win,
+.win7up.x86.x64 .download-button .os_win,
 .android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
@@ -186,7 +186,7 @@ button {
   display: none !important;
 }
 
-.win7up.x86.x64 .download-button-nightly .os_win64,
+.win7up.x86.x64 .download-button .os_win64,
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
 .windows .download-button .os_win,
