--- a/assets/less/base/sizing.less
+++ b/assets/less/base/sizing.less
@@ -34,6 +34,13 @@ each(@min-heights, #(@k, @v) {
   }
 });
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	.platform-img {
+		width: 100%;
+		height: 100%;
+	}
+}
+
 each(@breakpoints, #(@k, @v) {
   @media (min-width: @k) {
     each(@widths, #(@i, @r) {
