change Nightly to Daily where possible. Fixes #247

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -135,8 +135,8 @@ button {
   }
 }
 
-.btn-nightly {
-  &:extend(.text-white, .font-md, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-3, .pb-3, .pl-6, .pr-6, .mb-5, .bg-nightly-button, .rounded-xs, .shadow);
+.btn-daily {
+  &:extend(.text-white, .font-md, .font-semibold, .no-underline, .uppercase, .inline-block, .pt-3, .pb-3, .pl-6, .pr-6, .mb-5, .bg-daily-button, .rounded-xs, .shadow);
 
   &:hover,
   &:focus {
