--- a/assets/less/components/tabs.less
+++ b/assets/less/components/tabs.less
@@ -10,7 +10,7 @@
 
 #release:checked ~ section.tab.release,
 #beta:checked ~ section.tab.beta,
-#nightly:checked ~ section.tab.nightly {
+#daily:checked ~ section.tab.daily {
   display: flex;
 }
 
@@ -35,7 +35,7 @@
 
 #release:checked ~ aside nav .tabs-nav .release label,
 #beta:checked ~ aside nav .tabs-nav .beta label,
-#nightly:checked ~ aside nav .tabs-nav .nightly label {
+#daily:checked ~ aside nav .tabs-nav .daily label {
   &:extend(.bg-blue, .text-white);
 }
 section.tab.release a.small-link {
