--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -29,7 +29,7 @@
     <article class="flex flex-1 flex-col lg:max-w-lg mb-10 lg:mb-0 tabs">
       <input {% if active_page != 'index' %}checked="checked" {% endif %}id="release" type="radio" name="pct" class="hidden"/>
       <input {% if active_page == 'index' %}checked="checked" {% endif %}id="beta" type="radio" name="pct" class="hidden"/>
-      <input id="nightly" type="radio" name="pct" class="hidden"/>
+      <input id="daily" type="radio" name="pct" class="hidden"/>
       <aside class="self-start text-left lg:-mt-12 ml-20 md:pl-8">
         <nav>
           <ul class="list-none p-0 flex flex-wrap font-semibold tabs-nav">
@@ -39,8 +39,8 @@
             <li class="beta">
               <label for="beta">Beta Channel</label>
             </li>
-            <li class="nightly">
-              <label for="nightly">Nightly Channel</label>
+            <li class="daily">
+              <label for="daily">Daily Channel</label>
             </li>
           </ul>
         </nav>
@@ -76,23 +76,23 @@
         </main>
       </section>
 
-      <section class="tab nightly flex flex-1">
+      <section class="tab daily flex flex-1">
         <aside class="w-16 md:w-24 pt-4">
-          {{ high_res_img('thunderbird/logos/nightly.png', {'alt': _('Thunderbird Nightly'), 'class': 'w-full h-auto'}) }}
+          {{ high_res_img('thunderbird/logos/daily.png', {'alt': _('Thunderbird Daily'), 'class': 'w-full h-auto'}) }}
         </aside>
         <main class="flex flex-col flex-1 ml-4">
-          <h3 class="header-section">{{ _('Thunderbird Nightly')}}</h3>
+          <h3 class="header-section">{{ _('Thunderbird Daily')}}</h3>
           <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-            {{ _('Help us test the newest developments made to Thunderbird every day by using the unstable Nightly channel.') }}
+            {{ _('Help us test the newest developments made to Thunderbird every day by using the unstable Daily channel.') }}
           </p>
           <p class="tracking-wider leading-loose mb-2 mt-0 flex-1 text-black-light">
             <span class="bg-orange p-1 rounded-sm font-bold mr-1 inline-block leading-none text-white font-sm">
               {{ _('WARNING!') }}
             </span>
-            {{ _('Nightly is an unstable testing and development platform, make sure you back up important data regularly!') }}
+            {{ _('Daily is an unstable testing and development platform, make sure you back up important data regularly!') }}
           </p>
           <aside class="ml-0 mr-0 self-start text-center text-blue font-semibold">
-            {{ download_thunderbird(force_direct=true, alt_copy=_('Download Nightly'), channel='nightly') }}
+            {{ download_thunderbird(force_direct=true, alt_copy=_('Download Daily'), channel='daily') }}
           </aside>
         </main>
       </section>
