--- a/website/_includes/download-button.html
+++ b/website/_includes/download-button.html
@@ -51,8 +51,8 @@
           {% else %}
             {% if channel == 'beta' %}
               {{ _('Thunderbird Beta') }}
-            {% elif channel == 'nightly' %}
-              {{ _('Thunderbird Nightly') }}
+            {% elif channel == 'daily' %}
+              {{ _('Thunderbird Daily') }}
             {% else %}
               {{ _('Download Thunderbird') }}
             {% endif %}
@@ -62,7 +62,7 @@
     {% endfor %}
   </ul>
   <p class="download-other download-other-desktop os_android os_ios os_linux os_linux64 os_osx os_win os_win64 os_winsha1 font-sm mt-0">
-    {% if channel != 'nightly' %}{# Nightly doesn't have an all download page or release notes. #}
+    {% if channel != 'daily' %}{# Daily doesn't have an all download page or release notes. #}
       <a href="{{ thunderbird_url('all', channel) }}" class="small-link {% if channel or section == 'body' %} text-blue {% endif %}">{{ _('Systems &amp; Languages') }}</a> &bull;
       <a href="{{ thunderbird_url('releasenotes', channel) }}" class="small-link {% if channel or section == 'body' %} text-blue {% endif %}">{{ _('What’s New') }}</a> &bull;
     {% endif %}
