New waths new header block

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -16,6 +16,10 @@ button {
     &:extend(.shadow-md);
     .transform(translateY(-7%));
   }
+
+  &.btn-donate-whatsnew {
+    &:extend(.mr-0, .ml-0, .pt-3, .pb-3, .pl-5, .pr-5);
+  }
 }
 
 .btn-download {
