New account setup section

--- a/assets/less/base/effects.less
+++ b/assets/less/base/effects.less
@@ -15,3 +15,8 @@ each(@opacity, #(@k, @v) {
     opacity: @k;
   }
 });
+
+// Drop shadow for PNG images
+.shadow-img {
+  filter: drop-shadow(5px 5px 6px rgba(0, 0, 0, 0.15));
+}
