--- a/assets/less/components/headings.less
+++ b/assets/less/components/headings.less
@@ -39,6 +39,10 @@ h1, h2, h3, h4, h5, h6 {
       width: 24px;
       height: 24px;
     }
+
+    &.green {
+      &:extend(.bg-green-light, .border-green-lightest);
+    }
   }
 }
 
