--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -59,6 +59,8 @@
 
     {% block header_content %}{% endblock %}
 
+    {% include '_includes/donate-modal.html' %}
+
     {% block breadcrumbs %}{% endblock %}
 
     {% block site_header_share %}{% endblock %}
